Licence and formatting.